--- a/blueprints/fdic-windows-iis/blueprint.yaml
+++ b/blueprints/fdic-windows-iis/blueprint.yaml
@@ -1,6 +1,6 @@
 formatVersion: 1
 name: FDIC - Windows IIS Server
-version: 1
+version: 2
 inputs:
   SelectCloud:
     type: string
@@ -26,6 +26,7 @@ resources:
     type: Cloud.Machine
     properties:
       image: Windows2016
+      count: 3
       flavor: Medium
       remoteAccess:
         authentication: usernamePassword
